# pointedalternative

./: LICENSE  pointedalternative.cabal  stack.yaml
src/Control/Alternative/: Pointed.hs
