name:                pointedalternative
version:             0.1.0.0
synopsis:            Alternative done right
description:         These combinators give an alternative approach to the Control.Monad.Loops library.
homepage:            http://ircbrowse.net/browse/haskell?q=manyLazy
license:             BSD3
license-file:        LICENSE
author:              Gurkenglas
maintainer:          gurkenglas@hotmail.de
copyright:           (c) 2016-2016 Gurkenglas
category:            library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Alternative.Pointed
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Gurkenglas/pointedalternative
